--- a/students/jsitarsk/index.html
+++ b/students/jsitarsk/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name's Page</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <h1>Welcome to Joey's Page</h1>
+    <h1 class = "dotted">Welcome to Joey's Page</h1>
     <p>This is my page for the web development class project.</p>
    <h1 style="background-color:Tomato;">Guide to watching Danny Devito's films</h1>
    <img src = "dannyDevito.jpg" alt = "Danny Devito">
@@ -43,7 +44,7 @@
 
 </body>
 
-
+<p class="red bold"> That was my website</p>
 
 
 </html>
